Fixed weather info viewheight to attempt to prevent overlapping when viewed on mobile horizontally.

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ input, select, textarea {
     position: fixed;
     width: 100vw;
     text-align: center;
-    top: 55%;
+    top: 55vh;
 }
 
 
